# CharucoBoard

./: .gitignore  LICENSE  README.md
charuco_pose_estimator/: CMakeLists.txt  dmain.cpp  main  main.cpp  mainn.cpp
